# CxxExtensible

./: .gitignore  CMakeLists.txt  README.md  extension.cpp  main.cpp  modulemanager.cpp  modulemanager.hpp
